<resources>
    <string name="app_name">QRazy</string>
    <string name="scan_qr_button_text">SCAN QR-CODE</string>
    <string name="home_title_text">QRAZY</string>
    <string name="map_button_text">MAP</string>
    <string name="user_profile_button_text">USER PROFILE</string>
    <string name="user_leaderboard_button_text">USER LEADERBOARD</string>
    <string name="qr_leaderboard_button_text">QR LEADERBOARD</string>
    <string name="back_button_text">Back button</string>
    <string name="scan_button_description">Scan QR code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_gallery_button_text">Add image from gallery</string>
    <string name="open_camera">Scan with camera</string>
    <string name="scanned">Codes Scanned:</string>
    <string name="total">Total Score:</string>
    <string name="lowest">Lowest:</string>
    <string name="highest">Highest:</string>
    <string name="username">Username:</string>
    <string name="hash">Hash:</string>
    <string name="qrscore">Score:</string>
</resources>